--- a/starter-code/app/src/main/res/layout/activity_result.xml
+++ b/starter-code/app/src/main/res/layout/activity_result.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Hello world!"
+                android:text=""
                 android:id="@+id/result_textview"
                 android:layout_marginTop="16dp" />
 
